Fixed dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
 @import "tailwindcss";
 @import "@fontsource/fredoka-one";
 
-
+@custom-variant dark (&:where(.light, .light *));
 /* Tipografías y reset */
 @font-face {
   font-family: 'Glacial Indifference';
@@ -42,7 +42,7 @@ body {
 }
 
 html, :root {
-  color-scheme: light !important;
+  color-scheme: light only !important;
 }
 
 html {
